syntax = "proto3";

package kvstore;

option go_package = "github.com/rutvik-gs/GRPC-KV-Store-System/schemas/grpc/kvStoreService";

service KeyValueStore {
  rpc Set(SetRequest) returns (SetResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  string message = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  string message = 1;
}